# AccessGuard

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/backend/: .env  db.py  db_depends.py  settings.py
app/migrations/: env.py
app/migrations/versions/: 28be395e8166_.py  c86a05b42286_.py
app/models/: access_rule.py  business_element.py  role.py  user.py
app/routers/: ac_rule.py  auth.py  roles.py  users.py
app/schemas/: access_rule.py  role.py  user.py
tests/: main.py  test_auth.py  test_main.py
