[project]
name = "accessguard"
version = "0.1.0"
description = ""
authors = [
    {name = "gewoggewog",email = "gewoggewog@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "pydantic[email] (>=2.12.3,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "bcrypt (==4.0.1)",
    "passlib (==1.7.4)",
    "authx (>=1.4.3,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "anyio (>=4.11.0,<5.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "mocker (>=1.1.1,<2.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pytest-tornasync (>=0.6.0.post2,<0.7.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
